# MediaPlus

./: .gitignore  LICENSE  README.md
MediaPlus/libraries/libmedia/: CMakeLists.txt  build.gradle
MediaPlus/libraries/libmedia/src/main/: AndroidManifest.xml
MediaPlus/libraries/libmedia/src/main/cpp/: GlobalDefs.h  NativeCrashHandler.cpp  NativeCrashHandler.h  PrefixHeader.h  TypeDefs.h  arguments.h  base_include.h  debug.cpp  debug.h  jni_encode_aac.cpp  jni_encode_aac.h  jni_encode_h264.cpp  jni_encode_h264.h  jni_ffmpeg_bridge.cpp  jni_ffmpeg_config.cpp  jni_ffmpeg_config.h  jni_handler.cpp  jni_handler.h  jni_pull_stream.cpp  jni_push_stream.c  jni_trans_stream.cpp  jni_trans_stream.h  jni_transstream.cpp  native-lib.cpp
MediaPlus/libraries/libmedia/src/main/cpp/core/: AudioCapture.cpp  AudioCapture.h  AudioEncodeArgs.h  AudioEncoder.cpp  AudioEncoder.h  CombineVideoHelper.cpp  CombineVideoHelper.h  DrawTextFilter.cpp  DrawTextFilter.h  FFmpegCommandLine.cpp  FFmpegCommandLine.h  FilterFactory.cpp  FilterFactory.h  FilterType.h  MediaCapture.cpp  MediaCapture.h  MediaEncoder.cpp  MediaEncoder.h  MediaFilter.cpp  MediaFilter.h  MediaStreamer.cpp  MediaStreamer.h  NativeCrashHandler.cpp  NativeCrashHandler.h  OriginData.cpp  OriginData.h  RtmpStreamer.cpp  RtmpStreamer.h  StringUtils.h  VideoCapture.cpp  VideoCapture.h  VideoEncodeArgs.h  VideoEncoder.cpp  VideoEncoder.h  VideoProcess.cpp  VideoProcess.h  debug.cpp  debug.h  threadsafe_queue.cpp
MediaPlus/libraries/libmedia/src/main/cpp/ffmpeg/libavutil/: aes_ctr.d  audio_fifo.d  base64.d  color_utils.d  crc.d  des.d  dict.d  display.d  eval.d  ffversion.h  file.d  fixed_dsp.d  hash.d  hmac.d  (+7 more)
MediaPlus/libraries/libmedia/src/main/cpp/jni/: Jni_Live_Manage.cpp  Jni_Live_Manage.h  cmdutils.h  cmdutils_common_opts.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  jni_FFmpeg_Command.cpp  jni_FFmpeg_Command.h  jni_Video_Process.cpp  jni_Video_Process.h
MediaPlus/libraries/libmedia/src/main/cpp/player/: MediaPlusPlayer.cpp  MediaPlusPlayer.h  jni_player.cpp  jni_player.h
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/: config-android.sh  config.asm  config.fate  config.h  config.mak  ffmpeg_arm_build.sh  ffmpeg_arm_v7a_build_more_all_in_one.sh  ffmpeg_x86_64_build.sh  ffmpeg_x86_build.sh  jianxi_ffmpeg_arm_v7a_build_more.sh
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/doc/: config.texi  fate.html  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-codecs.html  ffmpeg-devices.1  ffmpeg-devices.html  ffmpeg-devices.pod  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.1  ffmpeg-utils.1  ffmpeg-utils.html  git-howto.html  libavcodec.html  libavdevice.html  libavfilter.html  libavformat.html
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/fdk-aac-0.1.5/: Android.mk  Makefile  Makefile.in  config-android.sh  config.status  fdk-aac.pc  fdk_aac_arm64_v8a_build.sh  fdk_aac_arm_build.sh  fdk_aac_armv7a_build.sh  fdk_aac_mips_build.sh  fdk_aac_x86_64_build.sh  fdk_aac_x86_build.sh  libfdk-aac.la  libtool
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/jni/: config-android.sh  config.asm  config.fate  config.h  config.mak  fdk_aac_x264_ffmpeg_buildarmv7.sh  ffmpeg_arm64_v8a_build.sh  ffmpeg_arm64_v8a_build_more.sh  ffmpeg_arm_build_more.sh  ffmpeg_arm_v7a_build.sh  ffmpeg_arm_v7a_build_more.sh  ffmpeg_x86_64_build_more.sh  ffmpeg_x86_build_more.sh
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aacadtsdec.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_fixed.d  aacps_float.d  aacpsdsp_fixed.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  ac3tab.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  (+645 more)
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/libavdevice/: libavdevice.pc
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/libavfilter/: aeval.d  af_acrusher.d  af_adelay.d  af_aecho.d  af_aemphasis.d  af_afade.d  af_afftfilt.d  af_aformat.d  af_agate.d  af_alimiter.d  af_amerge.d  af_amix.d  af_anequalizer.d  af_anull.d  af_apad.d  af_aphaser.d  af_apulsator.d  af_aresample.d  af_asetnsamples.d  af_asetrate.d  af_ashowinfo.d  af_astats.d  af_atempo.d  af_biquads.d  af_channelmap.d  af_channelsplit.d  af_chorus.d  af_compand.d  af_compensationdelay.d  af_crystalizer.d  af_dcshift.d  af_dynaudnorm.d  af_earwax.d  af_extrastereo.d  af_firequalizer.d  af_flanger.d  af_hdcd.d  af_join.d  af_pan.d  af_replaygain.d  (+212 more)
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/libavformat/: 3dostr.d  4xm.d  aacdec.d  aadec.d  ac3dec.d  acm.d  act.d  adp.d  ads.d  adtsenc.d  adxdec.d  aea.d  afc.d  aiffdec.d  aixdec.d  allformats.d  amr.d  anm.d  apc.d  ape.d  apetag.d  apngdec.d  aqtitledec.d  asf.d  asfcrypt.d  asfdec_f.d  asfdec_o.d  assdec.d  ast.d  astdec.d  async.d  au.d  avc.d  avidec.d  avio.d  aviobuf.d  avlanguage.d  avr.d  avs.d  bethsoftvid.d  (+302 more)
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/libavutil/: adler32.d  bprint.d  buffer.d  camellia.d  cast5.d  channel_layout.d  downmix_info.d  error.d  file_open.d  frame.d  imgutils.d  intmath.d  libavutil.pc  log.d  mastering_display_metadata.d  md5.d  opt.d  pixdesc.d  pixelutils.d  random_seed.d  samplefmt.d  xga_font_data.d  xtea.d
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/libpostproc/: libpostproc.pc
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/libswresample/: audioconvert.d  dither.d  libswresample.pc  options.d  rematrix.d  resample.d  resample_dsp.d  swresample.d  swresample_frame.d
MediaPlus/libraries/libmedia/src/main/ffmpeg-3.2.5/libswscale/: alphablend.d  gamma.d  hscale.d  hscale_fast_bilinear.d  input.d  libswscale.pc  options.d  output.d  rgb2rgb.d  slice.d  swscale.d  swscale_unscaled.d  utils.d  vscale.d  yuv2rgb.d
MediaPlus/libraries/libmedia/src/main/res/values/: strings.xml
(+444 files in other folders)
